@@ -944,7 +944,7 @@ name|sortSpec
 operator|=
 name|parser
 operator|.
-name|getSort
+name|getSortSpec
 argument_list|(
 literal|true
 argument_list|)
