@@ -362,10 +362,32 @@ return|;
 block|}
 annotation|@
 name|Override
+annotation|@
+name|Deprecated
 DECL|method|getSort
 specifier|public
 name|SortSpec
 name|getSort
+parameter_list|(
+name|boolean
+name|useGlobal
+parameter_list|)
+throws|throws
+name|SyntaxError
+block|{
+return|return
+name|getSortSpec
+argument_list|(
+name|useGlobal
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSortSpec
+specifier|public
+name|SortSpec
+name|getSortSpec
 parameter_list|(
 name|boolean
 name|useGlobal
@@ -378,7 +400,7 @@ name|sort
 init|=
 name|super
 operator|.
-name|getSort
+name|getSortSpec
 argument_list|(
 name|useGlobal
 argument_list|)
